<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventoryapp.DetailActivity">

    <LinearLayout
        android:id="@+id/prod_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prod_code_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/product_code"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/prod_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/product_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/prod_quantity_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/product_quantity"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/prod_price_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/product_price"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prod_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="111"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/prod_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/prod_quantity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/prod_price_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/prod_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/prod_details_layout"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/prod_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prod_image"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:onClick="uploadImage"
        android:padding="8dp"
        android:text="@string/upload_image"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <Button
        android:id="@+id/prod_details_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prod_details_menu"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:onClick="saveProduct"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/prod_details_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prod_details_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:onClick="updateProduct"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/prod_details_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="orderProduct"
            android:text="@string/order_more"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/prod_details_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:onClick="deleteProduct"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>
